title fixed with vertical-align

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ header
 .head-top span{
   font-size: 2.5rem;
   font-weight: bold;
+  vertical-align: middle;
+}
+
+.head-top img{
+  vertical-align: middle;
 }
 
 /* container button */
@@ -81,6 +86,7 @@ header
   height: 15px;
   border: 1px solid green;
   border-radius: 50%;
+  margin-right: 10px;
 }
 
 .cross::before{
@@ -94,6 +100,7 @@ header
   height: 15px;
   border: 1px solid red;
   border-radius: 50%;
+  margin-right: 10px;
 }
 
 /* all tags dimension and font */
